--- a/src/aspire-base/SeatingAPI/SeatingAPI.csproj
+++ b/src/aspire-base/SeatingAPI/SeatingAPI.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.0.12" />
   </ItemGroup>
 
   <ItemGroup>
