--- a/src/aspire-base/aspire-azure.AppHost/aspire-azure.AppHost.csproj
+++ b/src/aspire-base/aspire-azure.AppHost/aspire-azure.AppHost.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
     <PackageReference Include="Aspire.Hosting.Azure.AppContainers" Version="9.1.0" />
+    <PackageReference Include="Aspire.Hosting.Azure.ApplicationInsights" Version="9.1.0" />
     <PackageReference Include="Aspire.Hosting.Azure.PostgreSQL" Version="9.1.0" />
   </ItemGroup>
 
